Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "'scatter'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,9 +306,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "scatter",
+         "uid": "4bd2366c-960e-11e9-9892-5b1fd102478d"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"3af97bb0-8696-4742-93e7-8d33013461e2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3af97bb0-8696-4742-93e7-8d33013461e2\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"scatter\", \"uid\": \"4bdd1dde-960e-11e9-9892-5b1fd102478d\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"3af97bb0-8696-4742-93e7-8d33013461e2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3af97bb0-8696-4742-93e7-8d33013461e2\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"scatter\", \"uid\": \"4bdd1dde-960e-11e9-9892-5b1fd102478d\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
