--- a/index.ipynb
+++ b/index.ipynb
@@ -276,26 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = [x_values]\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
